--- a/frontend_app/index.html
+++ b/frontend_app/index.html
@@ -32,11 +32,20 @@
         </div>
       </nav>
 
-      estoy en el inicio
+    <main class="container pt-3 pb-3">
+      <div class="row">
+        <div class="col">
+          <h1 class="text-center">conoce nuestors productos</h1>
+        </div>
+      </div>
+
+      <div class="row gap-3 justify-content-center" id="product-list">
+        <!--aqui va la lista de productos -->
+      </div>
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script type="module" src="js/api.js"></script>
-    <script type="module" src="js/app.js"></script>
-                                           
+    <script type="module" src="js/app.js"></script>                                           
 </body>
 </html>
